--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="most_popular_movies">"The most popular movies of "</string>
     <string name="submit">submit</string>
     <string name="overview">Overview</string>
+    <string name="release_date">Release: %s</string>
 </resources>
